Working on Rendering each tile

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="./react_minesweeper.jsx"></script>
+  <script src="./bundle.js"></script>
+  <link rel="stylesheet" href="application.css" type="text/css">
   <title>Minesweeper</title>
 </head>
 <body>
   <div id="root">
-    <h1>Webpack running?</h1>
+    <h1> Game Board is not rendering </h1>
   </div>
 </body>
 </html>
