Issues with css. Tile styling is off

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="./bundle.js"></script>
-  <link rel="stylesheet" href="application.css" type="text/css">
   <title>Minesweeper</title>
+  <link rel="stylesheet" href="application.css" type="text/css">
+  <script src="bundle.js"></script>
 </head>
 <body>
   <div id="root">
